--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-twitch fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
@@ -90,7 +90,7 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-discord-f fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
@@ -98,12 +98,12 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <p class="copyright text-muted"></p>
           </div>
         </div>
       </div>
