--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-twitch fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
@@ -134,7 +134,7 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-discord fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
@@ -142,12 +142,12 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+            <p class="copyright text-muted"></p>
           </div>
         </div>
       </div>
