--- a/about.html
+++ b/about.html
@@ -63,48 +63,47 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p><strong> Vitaliy Tsal </strong> also known as <strong> Arthas </strong> (previously <strong> EvilArthas </strong>), <strong> Papich </strong> or <strong> Hailrake. </strong> Popular Ukrainian streamer. Known for his scandalous and defiant behavior. On its stream collects a huge audience. Vitaliy Streaming not only Dota 2, but streaming in this discipline made him famous. Arthas also occasionally comments on some games at major Dota 2 tournaments.</p>
-          <img src="img/arthas2.jpg" class="img-thumbnail">
-          <p>Vitaliy's story begins in 2005 (at the time he was 15 years old), when he begins to actively play the DotA. By 2006, having filled a hand and having pumped a skill becomes one of the most famous "pubstormers" of that time. His builds on Windrunner with a quick Linken Sphere and Leoric with a quick Blink quickly become classics. Vitaliy also turns out to be a good poker player, and after school the winnings in online poker rooms brought him a steady income.</p>
-          <img src="img/arthas3.jpg" class="img-thumbnail">
-          <p>After he got famous people were paying him to stream Dota 2, it was in 2014. After that, he only continued to become more popular and capture the audience. Today Arthas one of the most popular streamers in Russian segment of Twitch. He has more than 580 000 subscribers on Twtich and almost 60 mln. views.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
         </div>
       </div>
     </div>
 
     <hr>
 
+    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
               <li class="list-inline-item">
-                <a href="https://twitch.tv/arthas">
+                <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitch fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://t.me/PathOfMisanthrope">
+                <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-telegram fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://vk.com/evilarthas">
+                <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
+                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted"></p>
+            <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
           </div>
         </div>
       </div>
